fixed text overflow issue

--- a/css/words.css
+++ b/css/words.css
@@ -5,7 +5,7 @@ body, html{
     background: linear-gradient(to bottom, #00b4db, #0083b0);
 }
 h1{
-    font-size: 15em;
+    font-size: 100px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 90px;
